# cupid-unleashed

./: .gitignore  build-zip.sh
cupid-unleashed-backend/: Cargo.toml
cupid-unleashed-backend/.cargo/: config.toml
cupid-unleashed-backend/src/: main.rs
cupid-unleashed-manager/: gradle.properties  settings.gradle.kts
cupid-unleashed-manager/app/: build.gradle.kts
cupid-unleashed-manager/app/src/androidTest/java/org/kenvyra/unleashedmanager/: ExampleInstrumentedTest.kt
cupid-unleashed-manager/app/src/main/: AndroidManifest.xml
cupid-unleashed-manager/app/src/main/java/org/kenvyra/unleashedmanager/: MainActivity.kt
cupid-unleashed-manager/app/src/main/java/org/kenvyra/unleashedmanager/ui/theme/: Color.kt  Theme.kt  Type.kt
cupid-unleashed-manager/app/src/main/res/drawable/: ic_launcher_foreground.xml
cupid-unleashed-manager/app/src/main/res/values/: strings.xml  themes.xml
cupid-unleashed-manager/app/src/test/java/org/kenvyra/unleashedmanager/: ExampleUnitTest.kt
cupid-unleashed-manager/gradle/: libs.versions.toml
cupid-unleashed-manager/gradle/wrapper/: gradle-wrapper.properties
zip-src/: customize.sh  module.prop  service.sh
